# Bookstore2

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_viewset.py
products/: factories.py  urls.py
products/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
products/models/: __init__.py  product.py
products/serializers/: category_serializer.py  product_serializer.py
products/test/: test_category_viewset.py  test_product_viewset.py
products/viewsets/: category_viewset.py  product_viewset.py
